--- a/settings.ini
+++ b/settings.ini
@@ -1,17 +1,17 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = nbdev_template
+lib_name = clarklib
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
-user = fastai
-# description = A description of your project
-# keywords = some keywords
-# author = Your Name
-# author_email = email@example.com
-# copyright = Your Name or Company Name
+user = flowclark
+ description = my first stab at this
+ keywords = ndbev tutorial
+ author = clark flower
+ author_email = cf@hotmail.com
+ copyright = junk test
 branch = master
 version = 0.0.1
 min_python = 3.6
